--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -198,6 +198,7 @@
               <a *ngIf="viewFlag.viewGSTFilingReport" href="javascript:void(0)" [routerLink]="['/report/GST-filling']" id="collapseExample7">GST Filling</a> 
               <a *ngIf="viewFlag.viewPettyCashCashCounterReport" href="javascript:void(0)" [routerLink]="['/report/petty-cash']" id="collapseExample7">Petty-Cash</a> 
               <a *ngIf="viewFlag.viewCustomerRewardReport" href="javascript:void(0)" [routerLink]="['/report/reward']" id="collapseExample7">Reward</a> 
+              <a *ngIf="viewFlag.viewCustomerRewardReport" href="javascript:void(0)" [routerLink]="['/report/customer-return']" id="collapseExample7">Customer Return</a> 
 
             </div>
           </div>
