--- a/web1/src/app/admin/summary/summary.component.html
+++ b/web1/src/app/admin/summary/summary.component.html
@@ -1,7 +1,8 @@
 <section class="content">
-    <div class="container-fluid ">
-  
-        <div class="row p-4">
+    <div class="container-fluid p-4">
+        <div class="card ">
+       
+        <!-- <div class="row p-4">
             <div class="col-12">
                 <h1 style="color: white; font-weight: 800;">Summary Report</h1>
             </div>
@@ -94,7 +95,7 @@
                                 <td>1000</td>
                                 <td>10003</td>
                             </tr>
-                           
+
                         </tbody>
                     </table>
                     <div class="table-responsive">
@@ -102,7 +103,7 @@
                             class="table table-striped table-hover table-sm table-bordered"
                             style="border: 2px solid #fff !important;">
                             <thead class="text-left">
-                                <tr >
+                                <tr>
                                     <th>Security</th>
                                     <th>Today</th>
                                 </tr>
@@ -129,12 +130,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-4 col-md-6 col-sm-6 col-12 crds" >
+            <div class="col-xl-6 col-lg-4 col-md-6 col-sm-6 col-12 crds">
                 <div class="table-responsive" style="width:100%; overflow: auto; height: 295px; border: 1px solid #1e2672;
                 box-shadow: 2px 2px 10px #606060bf;
                 border-radius: 5px; background: #ffffffd6;">
-                    <table  id="exportsss"
-                        class="table table-striped table-hover table-sm table-bordered"
+                    <table id="exportsss" class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;">
                         <thead>
                             <tr>
@@ -163,6 +163,116 @@
                     </table>
                 </div>
             </div>
+        </div> -->
+
+        <div class="row ">
+            <div class="col-12">
+                <h1 style="color: rgb(255, 60, 0); font-weight: 800;">Summary Report</h1>
+            </div>
         </div>
+
+        <div class="row ">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 p-0" style=" height: 300px; overflow: auto; border: 2px solid #212974;">
+                <table class="table2 bg-light" style="width:100%">
+                    <thead>
+                        <tr>
+                          <th>
+                            <div class="filter-container">
+                                <i class="fa-solid fa-filter btnFilter"></i> Shop
+                                <div class="filter-options">
+                                    <div>Today</div>
+                                    <div>Month</div>
+                                </div>
+                            </div>
+                        </th>
+                            <th>Sale Amount </th>
+                            <th>Total Collection</th>
+                            <th>Received Amonut</th>
+                            <th>Due Amonut</th>
+                            <th>Old Received Amonut</th>
+                            <th>Expenss</th>
+                            <th>New Bill</th>
+                            <th>New Customer</th>
+                            <th>New EyeTest</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Optocare</td>
+                            <td>1000</td>
+                            <td>1000</td>
+                            <td>5000</td>
+                            <td>4000</td>
+                            <td>100</td>
+                            <td>2000</td>
+                            <td>5</td>
+                            <td>5</td>
+                            <td>5</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-12 p-0" style=" height: 300px; overflow: auto; border: 2px solid #212974;">
+                <table class="table2 bg-light" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Shop</th>
+                            <th>Today Balance </th>
+                            <th>All Balance</th>
+                            <th>Today Pending</th>
+                            <th>All Pending</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Optocare</td>
+                            <td>1000</td>
+                            <td>1000</td>
+                            <td>5000</td>
+                            <td>4000</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 ms-auto p-0" style=" height: 300px; overflow: auto;border: 2px solid #212974;">
+                <table class="table2 bg-light" style="width:100%">
+                    <thead>
+                        <tr>
+                          
+                            <th>
+                                <div class="filter-container">
+                                    <i class="fa-solid fa-filter btnFilter"></i> Shop
+                                    <div class="filter-options">
+                                        <div>Today</div>
+                                        <div>Month</div>
+                                    </div>
+                                </div>
+                            </th>
+                            <th>Delete Bill </th>
+                            <th>Delete Customer</th>
+                            <th>Delete Product</th>
+                            <th>Delete Expenses</th>
+                           
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Optocare</td>
+                            <td>1000</td>
+                            <td>1000</td>
+                            <td>5000</td>
+                            <td>4000</td>
+                           
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        </div>
+
     </div>
 </section>
